<resources>
    <string name="app_name">Hipo - Android Summer Internship</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="okay">OK</string>
    <string name="error">Error!</string>
    <string name="unknown_error">An unknown error occured. Please try again!</string>
    <string name="connection_error">There is a problem with your internet connection. Please try again!</string>
    <string name="search">Search...</string>
    <string name="add_me">Add me</string>
    <string name="android_summer_internship">Android Summer Internship</string>
    <string name="my_name">Aziz Utku Kağıtcı</string>
    <string name="members">Members</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="sort_by">Sort by</string>
    <string name="clean">Clean</string>
    <string name="age_"><![CDATA[Age >]]></string>
    <string name="location_"><![CDATA[Location >]]></string>
    <string name="position_"><![CDATA[Position >]]></string>
    <string name="years_in_hipo_"><![CDATA[Years in Hipo >]]></string>
</resources>
