<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="16dp">

    <View
        android:id="@+id/bottom_sheet_view_holder"
        android:layout_width="120dp"
        android:layout_height="6dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_line_bottomsheet" />

    <RelativeLayout
        android:id="@+id/bottom_sheet_rlt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/bottom_sheet_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sort_by"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/bottom_sheet_img_sort_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="2dp"
            android:layout_toStartOf="@id/bottom_sheet_txt_clean"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_ascending" />

        <TextView
            android:id="@+id/bottom_sheet_txt_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_bold"
            android:padding="6dp"
            android:text="@string/clean"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:id="@+id/bottom_sheet_view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/bottom_sheet_rlt_header"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorDivider"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_sheet_view_divider"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/bottom_sheet_btn_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_sort_unselected"
            android:fontFamily="@font/poppins_medium"
            android:tag="0"
            android:text="@string/name"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/bottom_sheet_btn_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_sort_unselected"
            android:fontFamily="@font/poppins_medium"
            android:tag="1"
            android:text="@string/age"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bottom_sheet_btn_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_sort_unselected"
            android:fontFamily="@font/poppins_medium"
            android:tag="2"
            android:text="@string/location"
            android:textAllCaps="false" />

    </LinearLayout>
</RelativeLayout>