<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_member_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:clickable="true"
        android:focusable="true"
        android:tag="0"
        android:visibility="visible"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="16dp"
        app:cardElevation="24dp">

        <RelativeLayout
            android:id="@+id/dialog_member_rlt_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical">

            <RelativeLayout
                android:id="@+id/dialog_member_rlt_header"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorAccent">

                <ImageView
                    android:id="@+id/dialog_member_img_header"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_details"
                    android:tint="@color/colorWhite" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dialog_member_rlt_header"
                android:orientation="vertical"
                android:padding="24dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dialog_member_txt_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Yasin Cetiner"
                        android:textColor="@color/colorBlack87"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/dialog_member_txt_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="GitHub"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp" />
                </RelativeLayout>

                <View
                    android:id="@+id/item_card_view_divider_1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/dialog_member_txt_name"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="12dp"
                    android:background="@color/colorDividerCard" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/dialog_member_txt_age_t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/age_"
                        android:textColor="@color/colorTextView"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dialog_member_txt_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="30"
                        android:textColor="@color/colorTextView"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/dialog_member_txt_location_t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/location_"
                        android:textColor="@color/colorTextView"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dialog_member_txt_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Istanbul"
                        android:textColor="@color/colorTextView"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/dialog_member_txt_position_t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/position_"
                        android:textColor="@color/colorTextView"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dialog_member_txt_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Android Developer"
                        android:textColor="@color/colorTextView"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/dialog_member_txt_years_t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/years_in_hipo_"
                        android:textColor="@color/colorTextView"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dialog_member_txt_years"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="2"
                        android:textColor="@color/colorTextView"
                        android:textSize="15sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="28dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dialog_member_txt_positive_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/poppins_bold"
                        android:padding="8dp"
                        android:text="@android:string/ok"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:visibility="visible" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>